--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -1,5 +1,5 @@
 {% comment %}
-    @param {Boolean} center 
+    @param {Boolean} center
 {% endcomment %}
 
 {% if include.center %}
@@ -60,7 +60,7 @@
   {% endif %}
   {% if site.github_username %}
   <li>
-    <a target="_blank" href="https://github.com/{{ site.github_username }}">
+    <a target="_blank" href="https://github.com/yt252091221">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
